--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,7 @@
   "name": "Curtain",
   "version": "0.1",
   "description": "A Chrome extension to disable and replace images, videos, and SVGs on a webpage.",
-  "permissions": [
-    "activeTab",
-    "scripting",
-    "storage",
-    "webNavigation"
-  ],
+  "permissions": ["activeTab", "scripting", "storage", "webNavigation"],
   "icons": {
     "16": "icons/icon16.png",
     "32": "icons/icon32.png",
@@ -16,7 +11,7 @@
     "128": "icons/icon128.png"
   },
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "dist/background.bundle.js"
   },
   "action": {
     "default_icon": "icons/icon128.png"
@@ -30,7 +25,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["dist/content.bundle.js"]
     }
   ]
 }
