--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     "128": "icons/icon128.png"
   },
   "background": {
-    "service_worker": "dist/background.bundle.js"
+    "service_worker": "background.js"
   },
   "action": {
     "default_icon": "icons/icon128.png"
@@ -25,7 +25,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["dist/content.bundle.js"]
+      "js": ["content.js"]
     }
   ]
 }
