--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
   "name": "Curtain",
-  "version": "0.9",
+  "version": "1.0",
   "description": "A Chrome extension to disable and replace images, videos, and SVGs on a webpage.",
-  "permissions": ["activeTab", "scripting", "storage", "webNavigation"],
+  "permissions": ["activeTab", "storage"],
   "icons": {
     "16": "icons/icon16.png",
     "32": "icons/icon32.png",
