Adds global and per-site rules for content control
Introduces a clear distinction between global defaults and site-specific content blocking rules. Users can now set universal preferences for all sites or override them on a per-site basis using a dedicated toggle in the control panel. Improves user clarity and flexibility by reflecting rule scope in both UI and storage logic.

Removes the need for a separate CSS file by inlining styles. Updates documentation to clarify global vs. site-specific behavior.

--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["control-panel.html", "control-panel.css"],
+      "resources": ["control-panel.html"],
       "matches": ["<all_urls>"]
     }
   ],
